--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Footer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/footer-style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      
+    <footer class="page-footer font-small blue">
+  <form action="#" method="GET">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a href="https://github.com/nocpinmylf/175A071063_175A071204/" data-toggle="tooltip" data-placement="right" title="Github">
+          <i class="fa fa-github" id="github"></i>
+        </a>
+      </div>
+  </form>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
