--- a/header.html
+++ b/header.html
@@ -14,11 +14,11 @@
   <body>
     <header>
       <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
-        <a class="navbar-brand" href="#">Hệ Thống Quản Lý Điểm Sinh Viên</a>
+        <!-- <a class="navbar-brand" href="#">Hệ Thống Quản Lý Điểm Sinh Viên</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
           aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
